<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- widget_margins defined in res/values/dimens.xml file -->
    <!-- All strings defined in res/values/strings.xml file -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_lbl1"
            android:onClick="onClick"/>
        <TextView
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_lbl2"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn"
            android:onClick="onClick"/>
        <CheckBox
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_chbx"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_txbx"
            android:onClick="onClick"/>
        <RadioButton
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rdbtn"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner"
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/show_picker"
            android:layout_margin="@dimen/widget_margins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_pckr"
            android:onClick="onClick"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/widget_margins"
        app:srcCompat="@android:drawable/ic_media_ff" />

</LinearLayout>